# caidas-legacy

./: .editorconfig  .env  .gitingore  README.md  app.json  run_local.sh  shema.json
backend/: .gitignore  README.md  jest.setup.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js
backend/backend/: package-lock.json  package.json  settings.py  urls.py  views.py  wsgi.py
backend/config/: settings.py
backend/prevcad/: admin.py  apps.py  decorators.py  dynamic_pagination.py  forms.py  middleware.py  models.py  serializers.py  urls.py  utils.py  views.py  widgets.py
backend/prevcad/admin/: __init__.py  action_log.py  app_activity_log.py  appointment.py  category_template.py  downloads.py  encoders.py  filters.py  health_category.py  health_category_diagnosis_format.py  system_document.py  text_recommendation.py  user.py  user_recommendation_interaction.py
backend/prevcad/migrations/: 0001_initial.py  0002_alter_textrecomendation_quote_link.py  0003_appactivitylog.py  0004_alter_appactivitylog_options_and_more.py  0005_alter_appactivitylog_options_appactivitylog_n_logins_and_more.py  0006_downloadablecontent_and_more.py  0007_downloadbyuser_unique_user_content_download.py  0008_downloadbyuser_created_date_and_more.py  0009_alter_downloadbyuser_download_date.py  0010_systemdocument.py
backend/prevcad/models/: __init__.py  action_log.py  activity.py  activity_node.py  app_activity_log.py  appointment.py  category_template.py  forms.py  (+12 more)
backend/scripts/: create_missing_profiles.py  depopulate_health_categories.py  fix_urls_apply.py  fix_urls_revert.py  generated_categories.json  migrate_users.py  populate_db.py  populate_health_categories.py  populate_text_recomendation.py  populate_text_recomendation_bkp.py  text_recomendation.xlsx
(+242 files in other folders)
